turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:24: error: Unit does not take parameters
  maison()
        ^